<resources>
    <string name="app_name">easyTextEditor</string>
    <string name="activity_btn_new">Neu</string>
    <string name="activity_btn_open">Öffnen</string>
    <string name="activity_btn_save">Speichern</string>
    <string name="activity_btn_delete">Löschen</string>
    <string name="activity_btn_back">Zurück</string>
    <string name="activity_btn_forth">Vor</string>
    <string name="dialog_speak">Sprich mit mir ...</string>
    <string name="dialog_speak_notext">Es ist kein Text für eine Wiedergabe vorhanden.</string>
    <string name="dialog_speak_nosupport">Sprachwiedergabe wird leider nicht unterstützt.</string>
    <string name="dialog_delete_text">Soll die Datei wirklich gelöscht werden?</string>
    <string name="dialog_delete_file">Datei wurde erfolgreich gelöscht!</string>
    <string name="dialog_delete_titel">Löschen</string>
    <string name="dialog_delete_yes">Ja</string>
    <string name="dialog_delete_no">Nein</string>
    <string name="dialog_selectall">Bitte die aktuelle Suche beenden.</string>
    <string name="dialog_neu_text">Soll ein neues Dokument erstellt werden? Alle bisherigen Daten werden gelöscht!</string>
    <string name="dialog_neu_titel">Neu</string>
    <string name="dialog_neu_yes">Ja</string>
    <string name="dialog_neu_no">Nein</string>
    <string name="dialog_save_yes">Ja</string>
    <string name="dialog_save_no">Nein</string>
    <string name="dialog_save_text">Sollen die Änderungen übernommen werden?</string>
    <string name="dialog_save_titel">Speichern</string>
    <string name="dialog_save_error">Fehler beim Speichern der Datei.</string>
    <string name="dialog_save_file">Datei : </string>
    <string name="dialog_save_info"> wurde gespeichert!</string>
    <string name="dialog_statistik_titel">Statistik</string>
    <string name="dialog_statistik_textw">Anzahl der Wörter im Text:</string>
    <string name="dialog_statistik_textz">Anzahl der Zeichen im Text:</string>
    <string name="dialog_statistik_btn_close">Schließen</string>
    <string name="dialog_suchen_titel">Suchen</string>
    <string name="dialog_suchen_text">Groß- und Kleinschreibung berücksichtigen:</string>
    <string name="dialog_suchen_btn_search">Suchen</string>
    <string name="dialog_suchen_btn_replace">Ersetzen</string>
    <string name="dialog_suchen_btn_close">Schließen</string>
    <string name="dialog_suchen_notext">Kein Text zum ersetzen gefunden.</string>
    <string name="dialog_suchen_text_no">Gesuchter Text wurde nicht gefunden.</string>
    <string name="dialog_suchen_ende">Aktuelle Suche muss erst beendet werden.</string>
    <string name="dialog_scan_start">Bild wird gescannt ....</string>
    <string name="dialog_scan_text">Bild antippen um es zu drehen.</string>
    <string name="dialog_scan_btn_scan">Bild scannen</string>
    <string name="dialog_settings_text1">Sprachsteuerung:</string>
    <string name="dialog_settings_option_german">Deutsch</string>
    <string name="dialog_settings_option_english">Englisch</string>
    <string name="dialog_settings_option_french">Französisch</string>
    <string name="dialog_settings_btn_take">Übernehmen</string>
    <string name="dialog_settings_text2">Info über Sprachsteuerung:</string>
    <string name="dialog_settings_text4">Für Fragen, Anregungen oder Kritik::</string>
    <string name="cam_options_ok">OK</string>
    <string name="cam_options_start">Start</string>
    <string name="cam_options_stop">Stop</string>
    <string name="image_scan_options_ok">OK</string>
    <string name="image_scan_options_image">Bild laden</string>
    <string name="options_text_scannen">Text scannen</string>
    <string name="options_image_scan">Bild laden</string>
    <string name="options_search">Suchen</string>
    <string name="options_statistics">Statistik</string>
    <string name="options_zoomin">Zoom in</string>
    <string name="options_zoomout">Zoom out</string>
    <string name="options_select_all">Alles markieren</string>
    <string name="options_settings">Einstellungen</string>
    <string name="dialog_open_error">Fehler beim Öffnen der Datei</string>
</resources>