<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:text="@string/dialog_neu_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnNein"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="Nein"
        android:text="@string/dialog_neu_no"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnJa"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="Ja"
        android:text="@string/dialog_neu_yes"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/btnNein"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Space
        android:layout_width="409dp"
        android:layout_height="17dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnJa" />
</androidx.constraintlayout.widget.ConstraintLayout>