<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="Datei löschen"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnNeu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/button"
        android:contentDescription="neu"
        android:text="@string/activity_btn_new"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/btnSpeichern"
        app:layout_constraintEnd_toStartOf="@+id/btnOeffnen"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnOeffnen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="7dp"
        android:background="@drawable/button"
        android:contentDescription="oeffnen"
        android:text="@string/activity_btn_open"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/btnSpeichern"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnNeu"
        app:layout_constraintTop_toTopOf="@+id/btnNeu" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button"
        android:contentDescription="Datei löschen"
        android:enabled="false"
        android:text="@string/activity_btn_delete"
        android:textColor="#C6C6C6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSpeichern" />

    <Button
        android:id="@+id/btnSpeichern"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button"
        android:contentDescription="speichern"
        android:text="@string/activity_btn_save"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnDelete"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtAktuelleDatei"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginStart="7dp"
        android:layout_marginBottom="10dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnNeu"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtChange"
        android:layout_width="170dp"
        android:layout_height="0dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="7dp"
        android:gravity="right"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEingabe" />

    <EditText
        android:id="@+id/editTextEingabe"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="7dp"
        android:background="@drawable/custom_edit_zwei"
        android:cursorVisible="true"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/txtAktuelleDatei"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVor"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnZurueck"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="5dp"
        android:alpha="0.60"
        android:contentDescription="suchenZurueck"
        android:enabled="false"
        android:text="@string/activity_btn_back"
        app:layout_constraintEnd_toStartOf="@+id/btnVor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnVor"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="5dp"
        android:alpha="0.60"
        android:contentDescription="suchenVor"
        android:enabled="false"
        android:text="@string/activity_btn_forth"
        app:layout_constraintEnd_toStartOf="@+id/btnClose"
        app:layout_constraintStart_toEndOf="@+id/btnZurueck"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnClose"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="5dp"
        android:alpha="0.60"
        android:contentDescription="suchenBeenden"
        android:enabled="false"
        android:text="X"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnVor"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>