<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextSuchen"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_edit"
        android:contentDescription="gesuchterText"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="20dp"
        android:singleLine="false"
        android:textColorHighlight="#2e83b8"
        android:textColorLink="#2e83b8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextErsetzen"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_edit"
        android:contentDescription="ersetzenText"
        android:drawableStart="@drawable/ic_replace"
        android:drawablePadding="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchCase" />

    <Button
        android:id="@+id/btnSuchen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="3dp"
        android:background="@drawable/button"
        android:contentDescription="textSuchen"
        android:enabled="false"
        android:text="@string/dialog_suchen_btn_search"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/btnErsetzen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextErsetzen" />

    <Button
        android:id="@+id/btnErsetzen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button"
        android:contentDescription="textErsetzen"
        android:enabled="false"
        android:text="@string/dialog_suchen_btn_replace"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSuchen"
        app:layout_constraintTop_toBottomOf="@+id/editTextErsetzen" />

    <Button
        android:id="@+id/btnSuchenSchliessen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button"
        android:contentDescription="suchenSchliessen"
        android:text="@string/dialog_suchen_btn_close"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnErsetzen" />

    <Space
        android:layout_width="411dp"
        android:layout_height="21dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSuchenSchliessen" />

    <Switch
        android:id="@+id/switchCase"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:checked="true"
        android:hint="CaseSensitive"
        android:singleLine="false"
        android:text="@string/dialog_suchen_text"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSuchen"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

</androidx.constraintlayout.widget.ConstraintLayout>